# Monoco

./: .aof  .mdf  CMakeCache.txt  CMakeLists.txt  GPATH  GRTAGS  GTAGS  Makefile  Makefile.am  Makefile.am~  README.md  client  cmake_install.cmake  config.h.in  config.h.in~  configure  configure.ac  configure.ac~  configure.scan  monoco.conf  monoco.conf~  sentry  server  slave
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
src/: ##common.hpp##  #cmds.cpp#  #common.hpp#  #intvec.cpp#  #intvec.hpp#  #mbj.cpp#  #mbj.hpp#  #mzset.hpp#  #net.hpp#  #server.hpp#  #test.cpp#  .aof  .aof~  .clang_complete  .mdf  Fuck  Makefile  Makefile.am  Makefile.am~  Makefile.in  any.hpp  any.hpp~  aof.hpp  aof.hpp~  cli  client.cpp  client.cpp~  client.hpp  client.hpp~  cmd.cpp  cmd.cpp~  cmds.cpp  cmds.cpp~  command.hpp~  common.hpp  config.hpp  connection.cpp~  connection.hpp  connection.hpp~  connection_manager.hpp  (+60 more)
src/.deps/: cmds.Po  main.Po  mdict.Po
