AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=Monoco
AM_CFLAGS= -std=c++1z -lboost_system  -lpthread -lboost_filesystem -lcrypto -lboost_thread
Monoco_HEADERS = aof.hpp     common.hpp  db.hpp    mbj.hpp    mht.hpp    mset.hpp  mzset.hpp   zl_entry.hpp cmds.cpp mdict.cpp utility.cpp
Monoco_SOURCES = main.cpp
